force-app/main/default/objects/Opportunity/fields/Strategic_Value__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Value__c</fullName>
    <description>What is the strategic value of this opportunity? Strategic = proves a new capability, a new industry, a new offering.</description>
    <inlineHelpText>What is the strategic value of this opportunity? 
Strategic = proves a new capability, a new industry, a new offering.
Commodity = we do these projects all the time and this helps build that story
Non-strategic = Does not provide a reference for a new capability, industry, technology</inlineHelpText>
    <label>Strategic Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic &amp; Margin+</fullName>
            </value>
            <value>
                <fullName>Strategic &amp; Margin Neutral</fullName>
            </value>
            <value>
                <fullName>Strategic &amp; Margin Neg (Investment)</fullName>
            </value>
            <value>
                <fullName>Commodity &amp; Margin +</fullName>
            </value>
            <value>
                <fullName>Commodity &amp; Margin Neutral</fullName>
            </value>
            <value>
                <fullName>Commodity &amp; Margin Negative</fullName>
            </value>
            <value>
                <fullName>Non-Strategic &amp; Margin +</fullName>
            </value>
            <value>
                <fullName>Non-Strategic &amp; Margin Neutral</fullName>
            </value>
            <value>
                <fullName>Non-Strategic &amp; Margin Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>