force-app/main/default/objects/Opportunity/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Supplier)</relationshipLabel>
    <relationshipName>SupplierOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>