force-app/main/default/objects/Opportunity/fields/Traceability_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Traceability_Matrix__c</fullName>
    <label>Traceability Matrix</label>
    <type>Url</type>
</CustomField>