force-app/main/default/objects/Opportunity/fields/Win_Wire__c.field-meta.xml
<CustomField>
    <fullName>Win_Wire__c</fullName>
    <label>Win-Wire</label>
    <type>Url</type>
</CustomField>