force-app/main/default/objects/Opportunity/fields/Win_Wire_Draft__c.field-meta.xml
<CustomField>
    <fullName>Win_Wire_Draft__c</fullName>
    <label>Win Wire Draft</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>