force-app/main/default/objects/Opportunity/recordTypes/Fluid.recordType-meta.xml
<RecordType>
    <fullName>Fluid</fullName>
    <active>true</active>
    <businessProcess>Fluid Sales Path</businessProcess>
    <label>Fluid</label>
</RecordType>