force-app/main/default/objects/Opportunity/recordTypes/Powder.recordType-meta.xml
<RecordType>
    <fullName>Powder</fullName>
    <active>true</active>
    <businessProcess>Powder Sales Path</businessProcess>
    <label>Powder</label>
</RecordType>