force-app/main/default/objects/Opportunity/validationRules/Amount_required_for_Solution_Pricing.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_required_for_Solution_Pricing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(StageName), ISPICKVAL(StageName, &quot;Solution &amp; Pricing / Proposal&quot;), ISBLANK( Amount))</errorConditionFormula>
    <errorMessage>Please enter an amount for this opportunity before advancing to Solution &amp; Pricing / Proposal</errorMessage>
</ValidationRule>