force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Reason_Picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Reason_Picklist</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
    <errorMessage>Please enter a Closed Lost reason</errorMessage>
</ValidationRule>