force-app/main/default/objects/Opportunity/validationRules/Closed_Won_Opportunity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_Opportunity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(StageName) = &apos;Closed Won&apos;,OR(Purchase_Order_Count__c &lt; 1 , Sales_Order_Count__c &lt; 1))</errorConditionFormula>
    <errorMessage>Please create a Sale Order and a Purchase Order for the Opportunity</errorMessage>
</ValidationRule>