force-app/main/default/objects/Opportunity/validationRules/FillProjectIfCreateProjIsNo.validationRule-meta.xml
<ValidationRule>
    <fullName>FillProjectIfCreateProjIsNo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				 Change_Order__c = false,
ISPICKVAL(StageName, &quot;Closed Won&quot;),
 ISBLANK(Project__c) 
)</errorConditionFormula>
    <errorDisplayField>Project__c</errorDisplayField>
    <errorMessage>Please select the project form the Opportunity Summary section. If the project does not exist please click on new project to create one form the project field.</errorMessage>
</ValidationRule>