force-app/main/default/objects/Opportunity/validationRules/FillProjectIfCreateProjIsNo2.validationRule-meta.xml
<ValidationRule>
    <fullName>FillProjectIfCreateProjIsNo2</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  		 Change_Order__c = true ,
ISPICKVAL(StageName, &quot;Closed Won&quot;),
 ISBLANK(Project__c) 
)</errorConditionFormula>
    <errorDisplayField>Project__c</errorDisplayField>
    <errorMessage>Please select the project form the Opportunity Summary section.</errorMessage>
</ValidationRule>