force-app/main/default/objects/Opportunity/validationRules/FollowUp_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>FollowUp_Date_Range</fullName>
    <active>true</active>
    <description>Follow-Up date has to be less than Opportunity Close Date</description>
    <errorConditionFormula>AND( 
     Follow_up_Date__c != null,
     Follow_up_Date__c &gt;= CloseDate
   )</errorConditionFormula>
    <errorMessage>Follow-Up Date cannot exceed the Close Date. Either keep it in range or push the close date ahead</errorMessage>
</ValidationRule>