force-app/main/default/objects/Opportunity/validationRules/Opp_Account_Planning_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_Account_Planning_Error</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Account.Account_Planning__c)),
    NOT(Account_Planning__c = Account.Account_Planning__c)
)</errorConditionFormula>
    <errorMessage>Opportunity Account Planning cannot be different from Account&apos;s Account Planning. Please change Account Planning on Account to update it on opportunity.</errorMessage>
</ValidationRule>