force-app/main/default/objects/Opportunity/validationRules/Technology_required_for_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Technology_required_for_Closed_Won</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(StageName), ISPICKVAL(StageName, &quot;Closed Won&quot;),	Related_Technology_Rollup__c&lt;1)</errorConditionFormula>
    <errorMessage>Closed Won Opportunities MUST have one or more related technologies that Caelius is implementing</errorMessage>
</ValidationRule>