force-app/main/default/objects/Opportunity/listViews/Alex_Active_Opportunities.listView-meta.xml
<ListView>
    <fullName>Alex_Active_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>Account_Planning__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Opportunity_Quality__c</columns>
    <columns>OPPORTUNITY.LAST_STAGE_CHANGE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>Last_Activity_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Alex</value>
    </filters>
    <label>Alex: Active Opportunities</label>
</ListView>