force-app/main/default/objects/Opportunity/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>Opportunity_Quality__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>Account_Planning__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>HOLD,Closed Won,Closed Lost</value>
    </filters>
    <label>ALL ACTIVE</label>
</ListView>