force-app/main/default/objects/Opportunity/listViews/Default_Opportunity_Pipeline.listView-meta.xml
<ListView>
    <fullName>Default_Opportunity_Pipeline</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Pending,HOLD,Salesforce Alignment,Client Introduction,Discovery / Scoping,Solution &amp; Pricing / Proposal,Proposal Feedback / Verbal,Contracting / Out for Signature,Closed Won,Closed Lost</value>
    </filters>
    <label>Opportunity Pipeline</label>
</ListView>