force-app/main/default/objects/Opportunity/listViews/Mark_Opps_Missing_Closing_Data.listView-meta.xml
<ListView>
    <fullName>Mark_Opps_Missing_Closing_Data</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Account_Planning__c</columns>
    <columns>Resource_Plan__c</columns>
    <columns>Proposal__c</columns>
    <columns>SOW__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Contracting / Out for Signature,Closed Won</value>
    </filters>
    <filters>
        <field>Opportunity_missing_closing_data__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mark: Opps Missing Closing Data</label>
</ListView>