force-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>Account_Planning__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Opportunity_Quality__c</columns>
    <columns>Last_Activity_Date__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>My Opportunities</label>
</ListView>